# neues-pptx-zu-pdf-gut

./: .gitignore  README.md  pyproject.toml  test_models.py
pptx2ua/: __init__.py  accessibility_optimizer.py  cli.py  docling_integration.py  enricher.py  models.py  parser.py  renderer.py  server.py  slide_renderer.py  validator.py
